moved the project files back 1 folder

--- a/projects/handmade-hero.vcxproj.filters
+++ b/projects/handmade-hero.vcxproj.filters
@@ -9,15 +9,15 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\code\build.bat">
+    <None Include="..\code\build.bat">
       <Filter>code</Filter>
     </None>
-    <None Include="..\..\misc\shell.bat">
+    <None Include="..\misc\shell.bat">
       <Filter>misc</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\code\win32_handmade.cpp">
+    <ClCompile Include="..\code\win32_handmade.cpp">
       <Filter>code</Filter>
     </ClCompile>
   </ItemGroup>
