--- a/projects/handmade-hero.vcxproj
+++ b/projects/handmade-hero.vcxproj
@@ -111,11 +111,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\code\win32_handmade.cpp" />
+    <ClCompile Include="..\code\win32_handmade.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\code\build.bat" />
-    <None Include="..\..\misc\shell.bat" />
+    <None Include="..\code\build.bat" />
+    <None Include="..\misc\shell.bat" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
